# pregex

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/eregex-node/: Cargo.toml  README.md  package-lock.json  package.json
crates/eregex-node/src/: lib.rs
crates/eregex-node/test/: smoke.js
crates/eregex-python/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_eregex.py
crates/eregex-python/python/eregex/: __init__.py
crates/eregex-python/src/: lib.rs
crates/eregex-wasm/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/eregex-wasm/scripts/: assemble-pkg.cjs
crates/eregex-wasm/src/: lib.rs
crates/eregex-wasm/test/: smoke.js
examples/: demo.rs  gap_match.rs
scripts/: bump-version.sh
src/: ast.rs  charset.rs  error.rs  escape.rs  flags.rs  lib.rs  match_obj.rs  matcher.rs  parser.rs  regex.rs  state.rs  unicode.rs
tests/: api.rs  charset.rs  edge_cases.rs  escape.rs  ex_partial.rs  flags.rs  integration.rs  partial.rs  readme_examples.rs  unicode.rs
