[package]
name = "eregex"
version.workspace = true
edition = "2024"
rust-version = "1.85"
authors = ["eregex contributors"]
description = "An advanced regular expression engine for Rust, inspired by mrab-regex"
license = "Apache-2.0"
repository = "https://github.com/mrabarnett/mrab-regex"
documentation = "https://docs.rs/eregex"
keywords = ["regex", "regular-expression", "text", "pattern", "fuzzy"]
categories = ["text-processing"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "eregex"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[features]
default = []
# Enable detailed per-node debug dumping of the compiled AST.
trace = []

# Single source of truth for the published version: every workspace member
# inherits it via `version.workspace = true`.
[workspace.package]
version = "0.1.1"

[workspace]
members = ["crates/eregex-node", "crates/eregex-python"]

# Native bindings (Node/Python) benefit from a tight release profile.
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
