[package]
name = "eregex-node"
version.workspace = true
edition = "2021"
rust-version = "1.85"
authors = ["eregex contributors"]
description = "Node.js bindings for eregex (napi-rs)"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
eregex = { path = "../..", version = "0.1.0" }
napi = { version = "3", default-features = false, features = ["napi3"] }
napi-derive = "3"

[build-dependencies]
napi-build = "2"
