[package]
name = "eregex-python"
version.workspace = true
edition = "2021"
rust-version = "1.85"
authors = ["eregex contributors"]
description = "Python bindings for eregex (pyo3)"
license = "Apache-2.0"
publish = false

[lib]
name = "eregex_python"
crate-type = ["cdylib"]

[dependencies]
eregex = { path = "../..", version = "0.1.0" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
